@@ -1,3 +1,10 @@
+2002-02-07  H.J. Lu  <hjl@gnu.org>
+
+	* sysdeps/mips/pspinlock.c (__pthread_spin_lock): Silence the
+	gcc warning.
+	(__pthread_spin_lock): Remove ".set noreorder".
+	* sysdeps/mips/pt-machine.h (__compare_and_swap): Liekwise.
+
 2002-02-05  H.J. Lu  <hjl@gnu.org>
 
 	* sysdeps/mips/pspinlock.c (__pthread_spin_lock): Not use
